# unifi-mobility-ha

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/release-notes/: v0.4.0.md  v0.4.2.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.6.1.md  v0.7.0.md
.github/workflows/: release.yml  validate.yml
custom_components/unifi_mobility/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  parser.py  select.py  sensor.py  strings.json  switch.py
custom_components/unifi_mobility/translations/: zh-Hans.json
tests/: conftest.py  test_api.py  test_config_flow.py  test_diagnostics.py  test_entities.py  test_firmware_fixtures.py  test_parser.py  test_setup.py
tests/fixtures/: umr_industrial_eu_1_17_11.json  umr_legacy_aliases.json
