[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "unifi-mobility-ha"
version = "0.6.1"
requires-python = ">=3.13.2"
dependencies = []

[project.optional-dependencies]
test = [
  "coverage[toml]>=7.6",
  "pytest==9.0.0",
  "pytest-asyncio==1.3.0",
  "pytest-homeassistant-custom-component==0.13.316",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --cov=custom_components.unifi_mobility --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
branch = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
